product_docs/docs/edb-postgres-ai/1.2/hybrid-manager/using_hybrid_manager/migration/migration_guides/snippet_sources/4_migrating_schemas/preparing_oracle_schemas.mdx
---
title: Preparing and importing Oracle schemas
navTitle: Preparing Oracle schemas
deepToC: true

---

## Schema handling for Oracle databases

You can use several different methods to prepare your schema, exclude unsupported constraints and import it to the destination database. This section provides guidelines for how to export and import your schemas for Oracle using Migration Portal.

Other valid routes for migrating DDL to import Postgres schemas include manually creating the schemas in the destination database, performing a [pg_dump](https://www.postgresql.org/docs/current/app-pgdump.html) to obtain the schemas and [pg_restore](https://www.postgresql.org/docs/current/app-pgrestore.html) to restore them, or employing [pgAdmin](https://www.pgadmin.org/docs/pgadmin4/latest/index.html), or [psql](https://www.postgresql.org/docs/7.0/app-psql.htm).

## Export

Use the collaborative [project-scoped workspace](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/schema_migration/migration_portal/access_mp/#project-scoped-workspace-vs-users-workspace) of the Migration Portal to convert and migrate schemas. The Hybrid Manager provides an integration that lets you use the HM Console to create a Migration Portal project where you can easily add source database schemas pre-loaded by the [Agent](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/migration_guides/oracle_to_hm_managed/) while you are performing a database migration.

### Prerequisites

-   You [registered an Oracle database](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/migration_guides/oracle_to_hm_managed/) with the Hybrid Manager.

-   **Optional:** The administrator of Hybrid Manager has [enabled and configured the AI Copilot with the AI/LLM of your organization](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/enabling_migration_copilot/) to facilitate resolving schema incompatibilities in the Migration Portal.

### Creating a Migration Portal project

You can create Migration Portal projects from the Hybrid Manager. 

1.  In the **Estate** page, select the **Migrations** tab.

2.  Select the **Database Name** of the database you want to migrate to open the database's detailed view.

3.  In the detailed view of the database, select the **Schemas** tab. 

4.  Select **+ New MP Project** or the the plus sign next to one of the schemas you want to migrate.

5.  In the pop-up window, enter the details for the Migration Portal project that will host the assessment, conversion and migration of the schemas and select **Continue**.

6.  Select all the schemas you want to add to this Migration Portal project. You can only select schemas that the Agent has ingested successfully and schemas that are not already part of a different MP project.

    **Note:** You can't add new schemas to the existing project later, but you can use a different project to migrate other schemas to the same destination database.

7.  Select **Create New Project**.

8.  In the background, this creates a Migration Portal project and loads the source schemas into it for analysis.

After the Hybrid Manager finishes loading the schemas and creating a project in the Migration Portal, a hyperlink is added with the name of the project. Select the hyperlink to open the Migration Portal.

The selected schemas have been uploaded and assessed by the Migration Portal. Use the AI Copilot or QuickHelp to help you resolve incompatibilities. 

## Import

1.  After you have resolved all compatibility issues, select **Migrate to …**.

2.  Select the **Online migration** option (recommended).

3.  Select the schemas you want to migrate, but disable **Constraints** from the list of objects underneath the database. Select **Next**.

    !!!note

        Ensure you exclude foreign key, check, and exclusion constraints from the SQL-formatted DDL before importing the schema to the destination database.

4.  In the **Connect to your cluster** page, enter the host name of the database cluster you want to use as a destination.

    !!!note

        If you are migrating to an HM-managed database cluster: You can find the Read/Write Host and other connection data at **Clusters** > select the cluster > **Connect**.

5.  Select **Next** and wait until the schemas have been imported successfully.

6.  Connect to the target database cluster and ensure the schemas have been migrated. You can now close the Migration Portal.

!!!note

    You will have to re-apply the excluded foreign key, check, and exclusion constraints on the destination database later in the migration process, after the migration is performed successfully. Therefore, ensure you keep track of the excluded constraints. The documentation will guide you on when and how to re-apply them.
